test/tests/bad/conflicting-var-def_1.carth
;; ConflictingVarDef

(defvar foo (letrec ((a 1) (a 2)) a))
